add style sheet and added grid columns/rows

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
+    <link rel="stylesheet" href="css/master.css" type="text/css" media="screen" title="no title" charset="utf-8">
     <meta charset="utf-8">
     <title>Spain</title>
 
@@ -12,13 +13,43 @@
         <h1>Vacation in Spain</h1>
         <h3>It's more afordable than you think</h3>
       </div>
-      <img src="http://kids.nationalgeographic.com/content/dam/kids/photos/Countries/Q-Z/spain-madrid.adapt.945.1.jpg" alt="Spain" />
-      <blockquote>
-        <h3 class="bg-info">Alice Johnson</h3>
+      <img src="http://kids.nationalgeographic.com/content/dam/kids/photos/Countries/Q-Z/spain-madrid.adapt.945.1.jpg" alt="Spain"/>
+      <div class="row">
+        <div class="col-md-4">
+          <h2>3-Day Getaway</h2>
+          <h4>$900: Aug 1st-Sept 1st</h4>
+          <ul>
+            <li>Boat Rides</li>
+            <li>Snorkling</li>
+            <li>Historical Siting</li>
+          </ul>
+        </div>
+        <div class="col-md-4">
+          <h2>7-Day Getaway</h2>
+          <h4>$1,500: Dec 1st-Feb 1st</h4>
+          <ul>
+            <li>Boat Rides</li>
+            <li>Horseback Riding</li>
+            <li>Historical Siting</li>
+          </ul>
+        </div>
+        <div class="col-md-4">
+          <h2>2 Week Getaway</h2>
+          <h4>$900: Aug 1st-Sept 1st</h4>
+          <ul>
+            <li>Wine Tasting</li>
+            <li>Hiking</li>
+            <li>Snorkling</li>
+            <li>Historical Siting</li>
+          </ul>
+        </div>
+      </div>
+      <blockquote class="bg-info">
+        <p>Alice Johnson</p>
         <p>"It was the best vacation i ever had!"</p>
       </blockquote>
-      <blockquote>
-        <h3 class="bg-info">John Smith</h3>
+      <blockquote class="bg-info">
+        <p>John Smith</p>
         <p><i> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</i></p>
       </blockquote>
     </div>
